navbar spacing fixes

--- a/_variables.scss
+++ b/_variables.scss
@@ -47,7 +47,7 @@ $info-foreground: rgba(0,98,152,1);
 
 // navigation bar -------------------------------------------------------------
 $navigation-bar-background: $background-page-base;
-$navigation-bar-foreground: $font-color-normal;
+$navigation-bar-foreground: $font-color-dull;
 $navigation-bar-active-border-size: $border-size-large;
 $navigation-bar-active-border: solid $navigation-bar-active-border-size $primary-accent-color;
 
